# rci-manager

./: .gitignore  LICENSE  README.md  pyproject.toml
completions/: _rci
src/rci_cli/: alloc.py  cli.py  config.py  launch.py  newtab.py  session.py  setup.py  slurm.py  ssh.py  state.py  tui.py
tests/: conftest.py  test_alloc.py  test_cli.py  test_config.py  test_launch.py  test_newtab.py  test_setup.py  test_slurm.py  test_ssh.py  test_tui.py
